@@ -26,7 +26,7 @@ public class PresencaService {
     }
 
     private EntradaResponseDTO calcularEntradaEscola(LocalDate dia, Escola escola) {
-        int quantidadeEntrada = reconhecimentoRepository.quantidadeDeReconhecimentosDistintos(dia, getNumerosDispositivosEntrada(escola));
+        int quantidadeEntrada = reconhecimentoRepository.quantidadeDeReconhecimentosDistintos(dia, getTodosNumerosDispositivosEntrada(escola));
         int quantidadeAusente = escola.getQuantidadeAlunos() - quantidadeEntrada;
         return EntradaResponseDTO.builder().quantidadeEntrada(quantidadeEntrada).quantidadeAusente(quantidadeAusente).build();
     }
@@ -35,8 +35,14 @@ public class PresencaService {
         return escola.getLocaisDeEntrada().stream().map(LocalDeEntrada::getNumeroDispositivo).collect(Collectors.toList());
     }
 
+    static List<String> getTodosNumerosDispositivosEntrada(Escola escola) {
+        List<String> ListaDispositivosEntrada = getNumerosDispositivosEntrada(escola);
+        ListaDispositivosEntrada.addAll(getNumerosDispositivosRefeitorio(escola));
+        return ListaDispositivosEntrada;
+    }
+
     static List<String> getNumerosDispositivosRefeitorio(Escola escola) {
-        return escola.getRefeitorios().stream().map(Refeitorio::getNumeroDispositivo).collect(Collectors.toList());
+        return escola.getRefeitorios().stream().map(Refeitorio::getNumeroDispositivo).toList();
     }
 
     public RefeitorioResponseDTO buscarComparecimentoRefeitorio(LocalDate dia, Escola escola) {
